--- a/style.css
+++ b/style.css
@@ -66,9 +66,12 @@ h1 {
   display: block;
 }
 
-#controls {
-  height: 50px;
+.controls {
+  height: 70px;
   background-color: #efead5;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .footer {
@@ -77,7 +80,7 @@ h1 {
   width: 100%;
 }
 
-ul {
+footer ul {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -94,7 +97,7 @@ ul {
   width: 36px;
 }
 
-img {
+footer img {
   display: block;
   width: 100%;
   height: auto;
@@ -102,4 +105,15 @@ img {
 
 ul {
   list-style: none;
+}
+
+
+.controls img {
+  height: 50px;
+  width: auto;
+}
+
+.about, .pause, .mute {
+  margin-left: 15px;
+  margin-right: 15px;
 }
