--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ span, article, footer, time, small {
 }
 
 body {
-  /*margin-top: 10px;*/
+  margin-top: 10px;
   background-image: url("http://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,w_1200/v1479025742/Sand-Wallpaper-11_q2glg7.jpg");
   background-size: cover;
 }
@@ -33,11 +33,13 @@ h1 {
 #canvas-and-controls {
   opacity: .95;
   width: 900px;
-  /*margin: auto;*/
+  margin: auto;
   box-shadow: 0 0 14px white;
 }
 
 .stats {
+  display: flex;
+  justify-content: center;
   background-color: #efead5;
   border: 1px solid darkgray;
 }
@@ -113,7 +115,44 @@ ul {
   width: auto;
 }
 
-.about, .pause, .mute {
+.pause, .mute,#about {
   margin-left: 15px;
   margin-right: 15px;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+#close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+#close:hover,
+#close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
