--- a/style.css
+++ b/style.css
@@ -45,23 +45,34 @@ h1 {
 }
 
 .stats li {
-  padding: 15px;
+  padding: 10px;
   border-right: 1px solid darkgray;
 }
 
-#round {
-  border-left: 1px solid darkgray;
+#level {
   width: 10%;
   text-align: center;
+  font-size: 27px;
 }
 
-#fish-box {
-  width: 30%;
+#remaining-clicks {
+  width: 75%;
+  vertical-align: middle;
+}
+
+#left {
+  width: 35px;
+}
+
+#left-start {
+  width: 35px;
 }
 
 #timer {
-  width: 5%;
+  width: 10%;
   text-align: center;
+  border: none;
+  font-size: 27px;
 }
 
 #canvas {
@@ -121,19 +132,18 @@ ul {
 }
 
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
 }
 
-/* Modal Content/Box */
 .modal-content {
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
@@ -142,7 +152,6 @@ ul {
     width: 80%; /* Could be more or less, depending on screen size */
 }
 
-/* The Close Button */
 #close {
     color: #aaa;
     float: right;
@@ -155,4 +164,10 @@ ul {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+#shark-face {
+  width: 30px;
+  height: auto;
+  border-radius: 50%;
 }
