--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ span, article, footer, time, small {
   box-sizing: inherit;
   background: transparent;
   font-family: 'Overlock';
+  cursor: url("fish.cur"), auto;
 }
 
 body {
@@ -58,14 +59,17 @@ h1 {
 #remaining-clicks {
   width: 75%;
   vertical-align: middle;
+  font-size: 22px;
 }
 
 #left {
   width: 35px;
+  margin-right: 5x;
 }
 
 #left-start {
   width: 35px;
+  margin-right: 10px;
 }
 
 #timer {
@@ -164,10 +168,4 @@ ul {
     color: black;
     text-decoration: none;
     cursor: pointer;
-}
-
-#shark-face {
-  width: 30px;
-  height: auto;
-  border-radius: 50%;
 }
