--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ span, article, footer, time, small {
   box-sizing: inherit;
   background: transparent;
   font-family: 'Overlock';
-  cursor: url("fish.cur"), auto;
+  /*cursor: url("fish.cur"), auto;*/
 }
 
 body {
@@ -89,10 +89,10 @@ h1 {
   align-items: center;
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
 }
 
 .footer {
-	position: fixed;
   bottom: 0;
   width: 100%;
 }
@@ -130,7 +130,7 @@ ul {
   width: auto;
 }
 
-.pause, .mute,#about {
+#mute, #about, #pause {
   margin-left: 15px;
   margin-right: 15px;
 }
@@ -148,12 +148,50 @@ ul {
     background-color: rgba(0,0,0,0.4);
 }
 
-.modal-content {
+.modal-content-about {
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
+    font-size: 22px;
+}
+
+.modal-content-won {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    height: 200px;
+    font-size: 40px;
+    text-align: center;
+}
+
+.modal-content-about p, .modal-content-won p, .modal-content-lose p, .modal-content-pause p {
+  margin: 35px;
+}
+
+.modal-content-lose {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    height: 220px;
+    font-size: 34px;
+    text-align: center;
+}
+
+.modal-content-pause {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    height: 290px;
+    font-size: 26px;
+    text-align: center;
 }
 
 #close {
@@ -165,6 +203,21 @@ ul {
 
 #close:hover,
 #close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#ok, #playAgain, #play {
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+    padding: 5px 10px;
+}
+
+#ok:hover, #ok:focus, #playAgain:hover, #playAgain:focus, #play:hover, #play:focus {
     color: black;
     text-decoration: none;
     cursor: pointer;
