--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ span, article, footer, time, small {
 
 body {
   margin-top: 10px;
-  background-image: url("http://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,w_1200/v1479025742/Sand-Wallpaper-11_q2glg7.jpg");
+  background-image: url("https://res.cloudinary.com/dbsxgncvx/image/upload/c_scale,w_1200/v1479025742/Sand-Wallpaper-11_q2glg7.jpg");
   background-size: cover;
 }
 
