--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ h1 {
   text-align: center;
   border: none;
   font-size: 27px;
+  z-index: 100;
 }
 
 #canvas {
@@ -89,11 +90,14 @@ h1 {
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
+  cursor: auto;
 }
 
 .footer {
   bottom: 0;
   width: 100%;
+  cursor: auto;
+  position: fixed;
 }
 
 footer ul {
@@ -102,11 +106,13 @@ footer ul {
   align-items: center;
   background-color: #145182;
   opacity: .9;
+  cursor: auto;
 }
 
 .footer li {
   width: 30px;
   margin: 5px 0px 5px 20px;
+  cursor: auto;
 }
 
 #ghkitty {
@@ -116,17 +122,25 @@ footer ul {
 footer img {
   display: block;
   width: 100%;
-  height: auto;
+  height: pointer;
 }
 
 ul {
   list-style: none;
 }
 
-
+footer img:hover {
+  cursor: auto;
+}
 .controls img {
   height: 45px;
   width: auto;
+  cursor: pointer;
+}
+
+.controls img:hover {
+  -webkit-filter: drop-shadow(0 0 2px #222);
+  filter: drop-shadow(0 0 2px #222);
 }
 
 #mute, #about, #pause {
@@ -224,4 +238,5 @@ ul {
     color: black;
     text-decoration: none;
     box-shadow: 0 0 4px black;
+    cursor: pointer;
 }
