--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ footer img:hover {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    height: 200px;
+    height: auto;
     font-size: 40px;
     text-align: center;
 }
@@ -196,7 +196,7 @@ footer img:hover {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    height: 220px;
+    height: auto;
     font-size: 34px;
     text-align: center;
 }
